apps/overlays/it/patch/sample-view/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-view
  labels:
    app: it-sample-view
spec:
  selector:
    matchLabels:
      deployment: it-sample-view
  template:
    metadata:
      labels:
        deployment: it-sample-view
        app: it-sample-view
    spec:
      containers:
        - name: sample-view
