apps/overlays/it/patch/sample-view/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-view
  labels:
    app: it-sample-view
spec:
  selector:
    deployment: it-sample-view
